Fix dashboard alignment.

--- a/src/app/dashboard/dashboard.component.scss
+++ b/src/app/dashboard/dashboard.component.scss
@@ -1,11 +1,12 @@
-.env-info {
-  min-width: 400px;
-  max-width: 400px;
-  margin: 8px;
+#card-container {
+  display: flex;
+  flex-direction: row;
 }
 
-.summary {
+.release-info {
   min-width: 400px;
+  width: fit-content;
+  height: fit-content;
   margin: 8px;
 }
 
@@ -17,8 +18,9 @@ li {
   list-style: none;
 }
 
-#summaryChart {
-  display: block;
-  width: 400px;
-  height: 400px;
+.payable-summary {
+  min-width: 400px;
+  width: fit-content;
+  height: fit-content;
+  margin: 8px;
 }
